tests/negative_tests/syntax_errors/missing_return_type.c
// INVALID - Syntax Error: missing return type
// Expected: "expected type specifier"
foo(int x) {  // ERROR: missing return type
    return x;
}
